--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Profile</title>
 </head>
 <body>
-$END$
+<div th:switch="${user}">
+    <h2 th:case="null">Something go wrong!</h2>
+    <h2 th:case="*">My profile</h2>
+    <table>
+        <thead>
+        <tr>
+            <th colspan="2"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>ID</td>
+            <td th:text="${user.id}"></td>
+        </tr>
+        <tr>
+            <td>Login</td>
+            <td th:text="${user.login}"></td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td th:text="${user.email}"></td>
+        </tr>
+        <tr>
+            <td>Projects</td>
+            <div th:each="project : ${projects}">
+                <td th:text="${project.title}"></td><p></p>
+            </div>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
