--- a/src/main/resources/templates/tickets/close_list.html
+++ b/src/main/resources/templates/tickets/close_list.html
@@ -3,15 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Close list</title>
+    <link rel="stylesheet" th:href="@{/top_nav.css}">
 </head>
 <body>
-<div th:switch="${tickets}">
+
+<div id="mySidenav" class="sidenav">
+    <form action="./open_list" method="GET">
+        <button class="sidelink" type="submit">User</button>
+    </form>
+    <form action="./create" method="GET">
+        <button class="sidelink" type="submit">Add Ticket</button>
+    </form>
+    <form action="/projects" method="GET">
+        <button class="sidelink" type="submit">Projects</button>
+    </form>
+    <form action="/auth/logout" method="POST">
+        <button class="sidelink" id="logout" type="submit">Logout</button>
+    </form>
+</div>
+
+<div class="topBar">
+    <form action="./open_list" method="GET">
+        <button class="tablink" type="submit">Open</button>
+    </form>
+    <form action="./progress_list" method="GET">
+        <button class="tablink" type="submit">In Progress</button>
+    </form>
+    <form action="./close_list" method="GET">
+        <button class="tablink" type="submit">Close</button>
+    </form>
+</div>
+
+<div th:switch="${tickets}" class="tickets">
     <h2 th:case="null">No tickets found!</h2>
     <div th:case="*">
-        <h2>Tickets</h2>
-        <a href="./open_list"> Open |</a>
-        <a href="./progress_list"> In progress |</a>
-        <a href="./close_list"> Close </a>
+        <h2></h2>
         <table>
             <thead>
             <tr>
@@ -22,7 +48,9 @@
                 <th>Open date</th>
                 <th>Close date</th>
                 <th>Status</th>
+                <th>Reporter</th>
                 <th>Assignee</th>
+                <th style="text-align: center">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -34,6 +62,7 @@
                 <td th:text="${ticket.openDate}"></td>
                 <td th:text="${ticket.closeDate}"></td>
                 <td th:text="${ticket.status}"></td>
+                <td th:text="${ticket.reporter.login}"></td>
                 <td th:text="${ticket.assignee.login}"></td>
                 <td><a th:href="@{./delete/{id}(id=${ticket.id})}">Delete</a></td>
             </tr>
