--- a/src/main/resources/templates/tickets/open_list.html
+++ b/src/main/resources/templates/tickets/open_list.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="mySidenav" class="sidenav">
-    <form action="./open_list" method="GET">
+    <form action="/me/profile" method="GET">
         <button class="sidelink" type="submit">User</button>
     </form>
     <form action="./create" method="GET">
