Replace 3 tickets list html by 1. Add 'Take' reference

--- a/src/main/resources/templates/projects/all.html
+++ b/src/main/resources/templates/projects/all.html
@@ -8,7 +8,7 @@
 <h1>Projects</h1><br/><br/>
 <a href="/create_project">Create project</a>
 <div th:each="project : ${projects}">
-    <a th:href="@{project/{id}/tickets/open_list(id=${project.id})}" th:text="${project.title}"></a>
+    <a th:href="@{project/{id}/tickets/list?status=OPEN(id=${project.id})}" th:text="${project.title}"></a>
     <a th:href="@{update_project/{id}(id=${project.id})}">Edit</a>
     <div th:each="user : ${project.users}">
         <p th:text="${user.login}"></p>
