--- a/src/main/resources/templates/tickets/update.html
+++ b/src/main/resources/templates/tickets/update.html
@@ -5,7 +5,7 @@
     <title>Update</title>
 </head>
 <body>
-<form action="#" th:action="@{./update}" method="post" id="ticket_form">
+<form action="#" th:action="@{../update}" method="post" id="ticket_form">
     <label for="id">ID</label>
     <input readonly type="number" th:value="${ticket.id}" id="id" name="id" placeholder="ID">
     <br/><br/>
@@ -41,10 +41,10 @@
     <input type="submit" value="Update Ticket">
 </form>
 <br/>
-<div th:switch="${ticket.status}">
-    <a th:case="${T(org.suai.tracker_test.model.Status).OPEN}" href="../open_list">Back</a>
-    <a th:case="${T(org.suai.tracker_test.model.Status).IN_PROGRESS}" href="../progress_list">Back</a>
-    <a th:case="${T(org.suai.tracker_test.model.Status).CLOSE}" href="../close_list">Back</a>
+<div th:switch="${ticket.status.name()}">
+    <a th:case="OPEN" th:href="@{../list?status=OPEN}">Back</a>
+    <a th:case="IN_PROGRESS" th:href="@{../list?status=IN_PROGRESS}">Back</a>
+    <a th:case="CLOSE" th:href="@{../list?status=CLOSE}">Back</a>
 </div>
 </body>
 </html>
