--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,13 +1,11 @@
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <title>Login Custom</title>
+    <link rel="stylesheet" th:href="@{/login.css}">
 </head>
 <body>
 <div class="container">
-    <form action="/auth/registration" method="GET">
-        <button type="submit">Registration</button>
-    </form>
     <form class="form-signin" method="post" action="/auth/login">
         <h2 class="form-signin-heading">Login</h2>
         <p>
@@ -18,7 +16,10 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn" type="submit" href='#'>Sign in</button>
+    </form>
+    <form class="form-signin" action="/auth/registration" method="GET">
+        <button class="btn" type="submit">Registration</button>
     </form>
 </div>
 </body>
