--- a/src/main/resources/static/tickets.css
+++ b/src/main/resources/static/tickets.css
@@ -142,24 +142,12 @@ th,tr:nth-child(even) {
     line-height: 30px;
     color: white;
 }
-/*
 
-.actionsInside {
-    background-color: #25b470;
-    color: #ffffff;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 10px 5px;
-    font-size: 17px;
-    width: 33.3333333%;
+
+.filter {
+    margin: 60px 10px 10px 235px;
+    padding: 10px 10px 10px 10px;
+    height: 30px;
+    text-align: left;
+    /*color: white;*/
 }
-
-.actionsInside:hover {
-    background-color: #157853;
-}
-
-.tdActions {
-    padding-left: 20px;
-}*/
