--- a/src/main/resources/templates/tickets/progress.html
+++ b/src/main/resources/templates/tickets/progress.html
@@ -24,8 +24,59 @@
     </form>
 </div>
 
+<h2 style="margin-left:235px">Current progress</h2>
 <div id="myProgress">
-    <div id="myBar" th:style="'width:' + ${progress} + '%;'"></div>
+    <div id="myBar" th:style="'width:' + ${progress} + '%;'" th:inline="text">[[${progress} + '%']]</div>
+</div>
+<div th:switch="${timeline}" class="timeline">
+    <h2 th:case="null">No actions found!</h2>
+    <div th:case="*">
+        <h2></h2>
+        <table>
+            <thead>
+            <tr>
+                <th colspan="5">Timeline</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="timelineAction : ${timeline}">
+                <td
+                    th:inline="text">[[${timelineAction.user.login} + ' '
+                    + ${timelineAction.action.name().toLowerCase().replaceAll("_", " ") + ' '
+                    + ' ticket '}]]
+                    <a th:inline="text"
+                       th:href="@{./details/{id}(id=${timelineAction.ticket.id})}">[['00' + ${timelineAction.ticket.id}]]</a><br/>
+                    [[${timelineAction.actionDate} + ' | ' + ${timelineAction.actionTime}]]
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <table>
+            <thead>
+            <tr>
+                <th>Statistics</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td th:inline="text">[['OPEN: ' + ${open}]] <br/>
+                    <a style="color:white">TEXT</a>
+                </td>
+            </tr>
+            <tr>
+                <td th:inline="text">[['IN PROGRESS: ' + ${in_progress}]]<br/>
+                    <a style="color:#f2f2f2">TEXT</a>
+                </td>
+            </tr>
+            <tr>
+                <td th:inline="text">[['CLOSE: ' + ${close}]]<br/>
+                    <a style="color:white">TEXT</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <p></p>
 </div>
 </body>
 </html>
