--- a/src/main/resources/templates/projects/create.html
+++ b/src/main/resources/templates/projects/create.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Project</title>
+    <link rel="stylesheet" th:href="@{/tickets.css}">
 </head>
 <body>
-<form action="#" th:action="@{/create_project}" th:object="${project}" method="post" id="project_form">
-    <label for="title">Title</label>
-    <input type="text" th:field="*{title}" th:value="*{title}" id="title" name="title"/>
-    <br/><br/>
-    <input type="submit" value="Update Project"/>
-</form>
+<div id="mySidenav" class="sidenav">
+    <form action="/me/profile" method="GET">
+        <button class="sidelink" type="submit">User</button>
+    </form>
+    <form action="/projects" method="GET">
+        <button class="sidelink" type="submit">Projects</button>
+    </form>
+    <form action="/auth/logout" method="POST">
+        <button class="sidelink" style="margin-top: 640px;" id="logout" type="submit">Logout</button>
+    </form>
+</div>
+<div class="container">
+    <form action="#" th:action="@{/create_project}" th:object="${project}" method="post" id="project_form">
+        <label for="title">Title
+            <input type="text" th:field="*{title}" th:value="*{title}" id="title" name="title" style="width: 100%"/>
+        </label>
+        <br/><br/>
+        <input id="postBtn" type="submit" value="Create Project"/>
+    </form>
+</div>
 </body>
 </html>
