--- a/src/main/resources/templates/projects/update.html
+++ b/src/main/resources/templates/projects/update.html
@@ -3,32 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Update project</title>
+    <link rel="stylesheet" th:href="@{/tickets.css}">
 </head>
 <body>
-<form action="#" th:action="@{/update_project}" th:object="${project}" method="post" id="project_form">
-    <label for="id">ID</label>
-    <input readonly type="text" th:field="*{id}" th:value="*{id}" id="id"/>
+<div id="mySidenav" class="sidenav">
+    <form action="/me/profile" method="GET">
+        <button class="sidelink" type="submit">User</button>
+    </form>
+    <form action="/projects" method="GET">
+        <button class="sidelink" type="submit">Projects</button>
+    </form>
+    <form action="/auth/logout" method="POST">
+        <button class="sidelink" style="margin-top: 640px;" id="logout" type="submit">Logout</button>
+    </form>
+</div>
+<div class="container">
+    <form action="#" th:action="@{/update_project}" th:object="${project}" method="post" id="project_form">
+        <label for="id">ID</label>
+        <input readonly type="text" th:field="*{id}" th:value="*{id}" id="id"/>
+        <br/><br/>
+        <label for="title">Title</label>
+        <input type="text" th:field="*{title}" th:value="*{title}" id="title" name="title"/>
+        <br/><br/>
+        <input type="submit" id="postBtn" value="Update Project"/>
+    </form>
     <br/><br/>
-    <label for="title">Title</label>
-    <input type="text" th:field="*{title}" th:value="*{title}" id="title" name="title"/>
+    <form action="#" th:action="@{/update_project_add}" method="post" id="project_form_add">
+        <input type="hidden" th:value="${project.id}" id="id_add" name="id" hidden/>
+        <label for="title">User Login</label>
+        <input type="text" id="user_login_add" name="user_login"/>
+        <br/><br/>
+        <input type="submit" id="postBtn" value="Add to project"/>
+    </form>
     <br/><br/>
-    <input type="submit" value="Update Project"/>
-</form>
-<br/><br/>
-<form action="#" th:action="@{/update_project_add}" method="post" id="project_form_add">
-    <input hidden type="text" th:value="${project.id}" id="id_add" name="id"/>
-    <label for="title">User Login</label>
-    <input type="text" id="user_login_add" name="user_login"/>
-    <br/><br/>
-    <input type="submit" value="Add to project"/>
-</form>
-<br/><br/>
-<form action="#" th:action="@{/update_project_remove}" method="post" id="project_form_remove">
-    <input hidden type="text" th:value="${project.id}" id="id_remove" name="id"/>
-    <label for="title">User Login</label>
-    <input type="text" id="user_login_remove" name="user_login"/>
-    <br/><br/>
-    <input type="submit" value="Remove from project"/>
-</form>
+    <form action="#" th:action="@{/update_project_remove}" method="post" id="project_form_remove">
+        <input type="hidden" th:value="${project.id}" id="id_remove" name="id" hidden/>
+        <label for="title">User Login</label>
+        <input type="text" id="user_login_remove" name="user_login"/>
+        <br/><br/>
+        <input type="submit" id="postBtn" value="Remove from project"/>
+    </form>
+</div>
 </body>
 </html>
