--- a/src/main/resources/templates/tickets/details.html
+++ b/src/main/resources/templates/tickets/details.html
@@ -10,7 +10,7 @@
     <form action="/me/profile" method="GET">
         <button class="sidelink" type="submit">User</button>
     </form>
-    <form action="./create" method="GET">
+    <form action="../create" method="GET">
         <button class="sidelink" type="submit">Add Ticket</button>
     </form>
     <form action="../list" method="GET">
